Initial updates from overleaf with Related Work

--- a/src/metadata.tex
+++ b/src/metadata.tex
@@ -1,12 +1,12 @@
 % !TEX root = document.tex
 
-\title{Master Thesis Template}
+\title{A music app fully owned and run by its users}
 \subtitle{Version of \today}
 %\subtitle{Master's Thesis}
-\author{Jan Kees}
-\authoremail{\url{jan.kees@student.tudelft.nl}}
-\birthplace{Amsterdam, the Netherlands}
-\studentid{31415}
+\author{Tim Wissel}
+\authoremail{\url{t.i.wissel@student.tudelft.nl}}
+\birthplace{Delft, the Netherlands}
+\studentid{4460251}
 \coverpicture{\includegraphics[width=13cm]{./img/maze.ps}}
 \colophon{\noindent
   \copyright{} \the\year{} \: \theauthor. \\[1em]
