--- a/src/000-abstract.tex
+++ b/src/000-abstract.tex
@@ -1,3 +1,3 @@
 % !TEX root = document.tex
 
-Abstract here.
+Widely used paid audio streaming services such as Spotify, Google Play, iTunes pay their artists only a small amount of income. A decentralized audio streaming system can directly connect artists to listeners, without a middleman. This can lead to a near-100 percent cut of revenue for the artist. This describes a decentralized autonomous audio streaming system called X. X is hosted, used and updated by a decentralized autonomous organization (DAO) consisting of artists and listeners. X uses torrents for serving audio files and the Delft TrustChain (a blockchain implementation) for an immutable database of artists and releases. In addition, X uses a micro-payment system for peer-to-peer donations to artists using EuroToken (TODO).
